##############################################
# Backlog
##############################################
- move defaultHTML to CFW project
- Session Timeout Configurable

##############################################
# Current
##############################################
- Fix Asynch Log potential missing logs 
- move HTML for login to CFW project
- Fix package resource security issue (CFWSetup.addAllowedPackages())
- added HTTP/HTTPS handling 
- added HTTP to HTTPS Redirect 
- created Default App