@@ -2,7 +2,8 @@
 
 <h1>Documentation</h1>
 <div>
-	<h2>Introduction</h2>
+	<div id="toc"></div>
+	<h1>Introduction</h1>
 	<p>
 		The Page Analyzer is a customized, YSlow setup based on <a target="_blank" href="http://yslow.org/">YSlow</a>, which provides various additional functionality.<br />
 		<br />
@@ -16,7 +17,7 @@
 		</ul>
 	</p>
 	
-	<h2>Step 1: Create a HAR File</h2>
+	<h1>Step 1: Create a HAR File</h1>
 	<p>Create a .har-File(har=HTTP Archive) using Chrome, Firefox, or Fiddler.</p>
 	<ul>
 		<li><strong>Page Analyzer: </strong>Go to the tab "Analyze URL" and enter the URL that should be analyzed. This works only when the application server has internet access, and the page is accessible without a login.</li>
@@ -27,7 +28,7 @@
 	</ul>
 	
 	
-	<h2>Step 2: Upload HAR File</h2>
+	<h1>Step 2: Upload HAR File</h1>
 	<p> 
 		After creating a .har-File upload it on the page &quot;HAR Upload&quot;. 
 		The summary will be displayed, please be aware that in the menu bar additional items where added where you can get other views as well. 
@@ -35,7 +36,7 @@
 	</p>
 	
 	
-	<h2>Step 3: Analysis</h2>
+	<h1>Step 3: Analysis</h1>
 	<p> 
 		Please consider the following when analyzing your websites performance with the Page Analyzer:
 	</p>
@@ -45,7 +46,7 @@
 		<li><strong>Use Scores as hints: </strong>Don't threat findings always as bugs, rather consider them as opportunities to improve your websites performance. Performance is always a trade for functionality and other things you want to have. Some of the bad grades might be there on purpose.</li>
 	</ul>
 	
-	<h2>Result View</h2>
+	<h1>Result View</h1>
 	<p>The following views are available from the menu when viewing a result:</p>
 	<ul>
 		<li><strong>Summary: </strong> Shows a summary of all requests on the page, the component statistics and grades. Click on a grade to open the panel and view the details. </li>
@@ -61,7 +62,7 @@
 		<li><strong>Chart &gt;&gt; Gantt Chart: </strong> Show a Gantt Chart for the analyzed page. Click on the magnifying icon to get more details for the request.</li>
 	</ul>
 
-	<h2>History View</h2>
+	<h1>History View</h1>
 	<p>The history view will provide you the following:</p>
 	<ul>
 		<li><strong>Table: </strong> A table with all your results. </li>
@@ -75,12 +76,12 @@
 	</ul>
 	<img src="/resources/images/docu_result_history.jpg" width="80%" style="border: 1px solid black;" />
 	
-	<h2>Comparison View</h2>
+	<h1>Comparison View</h1>
 	<p>The comparison view will show you key metrics for each result selected on the history view. </p>
 s
 	<img src="/resources/images/docu_compare_view.jpg" width="80%" style="border: 1px solid black;"/>
 	
-	<h2>Useful Links</h2>
+	<h1>Useful Links</h1>
 	<ul>
 		<li><strong>Tuning Guide - Google(PageSpeed): </strong><a target="_blank" href="https://developers.google.com/speed/docs/insights/rules">https://developers.google.com/speed/docs/insights/rules</a></li>
 		<li><strong>Tuning Guide - Yahoo(YSlow): </strong><a target="_blank" href="https://developer.yahoo.com/performance/rules.html">https://developer.yahoo.com/performance/rules.html</a></li>
